# alligator

./: .appveyor.yml  .cirrus.yml  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  bigtop.repo
src/: .clang-tidy.analyze  .clang-tidy.lint  CMakeLists.txt  alligator.service  alligator_template.h  analyze.sh  bootstrap.sh  conanfile.txt  main.c  main.h  playbook.yml  win32.c
src/action/: action.c  action.h  del.c  get.c  push.c  type.h
src/amtail/: amtail.c  del.c  push.c  type.h
src/api/: api.h  api_router.c  api_v1.c
src/cadvisor/: a.out  libvirt.c  libvirt.h  metrics.c  metrics.h  ns.c  ns.h  run.c  run.h  test@localhost
src/chromecdp/: cdp.c  cdp.h  chromecdp.c  chromecdp.h  target.c  target.h  ws.h
src/cluster/: api.c  del.c  get.c  get.h  handler.c  k8s_peers.c  k8s_peers.h  later.c  later.h  pass.c  pass.h  push.c  sync.c  type.c  type.h
src/common/: ac_free.c  aggregator.c  aggregator.h  auth.c  auth.h  base64.c  base64.h  crc32.c  crc32.h  deb.c  deb.h  entrypoint.c  entrypoint.h  fastcgi.c  fastcgi.h  file_stat.c  file_stat.h  http.c  http.h  http_entrypoint.c  http_entrypoint.h  https_tls_check.c  https_tls_check.h  iptc.c  iptc2.c  jni.h  json_parser.c  json_parser.h  json_query.c  json_query.h  lcrypto.c  lcrypto.h  log_elastic.c  log_elastic.h  log_http.c  log_http.h  log_jansson.c  log_jansson.h  log_json.c  log_json.h  (+56 more)
src/config/: aggregate.c  context.c  context.h  env.c  env.h  file.c  get.c  get.h  intstrvalue.c  intstrvalue.h  mapping.c  mapping.h  parser.c  parser.h  plain.c  plain.h
src/dstructures/: ht.c  ht.h  maglev.c  maglev.h  metric.c  metric.h  queue.c  queue.h  rbtree.c  rbtree.h  tommy.c  tommy.h  uv_cache.c  uv_cache.h  uv_timer.c  uv_timer.h
src/dstructures/ngram/: ngram.c  ngram.h
src/dstructures/tommyds/: tommytypes.h
src/dstructures/tommyds/tommyds/: tommytypes.h
src/dynconf/: sd.c  sd.h
src/events/: a_signal.c  a_signal.h  access.c  access.h  client.c  client.h  client3.c  client3.h  client4.c  client_info.h  context_arg.c  context_arg.h  debug.c  debug.h  evt_uv_tls.h  filetailer.c  filetailer.h  fragmentation.c  fragmentation.h  fs_read.c  fs_read.h  fs_write.c  fs_write.h  general.c  general.h  https_server.c  httpserver.c  icmp.c  icmp.h  metrics.c  metrics.h  process.c  process.h  sclient.c  sclient2.c  sclient2.h  sclient3.c  sclient3.h  server.c  server.h  (+18 more)
src/grok/: del.c  get.c  grok.c  push.c  type.h
src/grok-patterns/: patterns.conf
src/lang/: alligatorJks.java  alligatorJmx.java  del.c  duktape.c  java.c  lang.c  lang.h  lua.c  mruby.c  push.c  python.c  python.h  so.c  type.h
src/lang/cassandra/: go.mod  go.sum
src/lang/mongo/: go.mod  go.sum
src/lang/parseJks/: go.mod  go.sum
src/mapping/: mapping.c  mapping.h  type.c  type.h
src/metric/: expiretree.c  expiretree.h  labels.c  labels.h  metric_dump.c  metric_dump.h  metric_types.h  metrictree.c  metrictree.h  namespace.c  namespace.h  percentile_heap.c  percentile_heap.h  query.c  query.h  serializer.c  transform.c
src/modules/: modules.c  modules.h  postgresql-include.h  postgresql.c  postgresql.h
src/parsers/: aerospike.c  alligator_mysql.h  auditd.c  beanstalkd.c  bson.c  bson.h  cassandra.c  cassandra2.c  cassandra2.h  clickhouse.c  consul.c  couchbase.c  couchdb.c  druid.c  dummy.c  dynatrace.c  elasticsearch.c  elasticsearch.h  eventstore.c  firewall.c  firewall.h  flower.c  gdnsd.c  gearmand.c  hadoop.c  haproxy.c  http_proto.c  http_proto.h  httpd.c  ipmi.c  ipmi.h  jks.c  jmx.c  json.c  json_parser.c  keepalived.c  kubeconfig.c  kubernetes.c  kubernetes_common.c  kubernetes_common.h  (+65 more)
src/platform/: libbsd.c  platform.h  windows.c
src/probe/: probe.c  probe.h
src/puppeteer/: puppeteer-alligator.js  puppeteer.c  puppeteer.h  puppeteer.js
src/query/: del.c  get.c  promql.c  promql.h  push.c  query.c  query.h  type.h
src/resolver/: dns.c  dns.h  get.c  getaddrinfo.c  getaddrinfo.h  internal.c  parser.c  resolver.c  resolver.h  tcp.c  udp.c
src/router/: conf.c  dsv.c  json.c  labels_cache.c  oplog.c  probe.c  resolver.c  router.h  sharedlock.c  stat.c
src/scheduler/: del.c  get.c  handler.c  influxdb.c  push.c  type.h
src/smart/: drivedb.c  drivedb.h  smart.c  smart.h
src/system/: common.c  common.h  fdescriptors.c  fdescriptors.h  freebsd.c  linux.c  linux.h  macosx.c  smbios.c  windows.c
src/system/bsd/: firewall.c  firewall.h
src/system/freebsd/: base.c  disk.c  network.c  packages.c  parsers.h  process.c  services.c  sockets.c  sysctl.c
src/system/linux/: conntrack.c  cpu.c  cpu.h  disk.c  disk.h  distribution_name.c  interrupts.c  ipmi.c  ipmi.h  ipset.c  memory.c  network.c  network.h  nftables.c  nftables.h  parsers.h  power_supply.c  sockets.c  sysctl.c  sysctl.h  systemd-sdbus.c  systemd.c  systemd.h
src/system/macosx/: base.c  disk.c  network.c  parsers.h  process.c  services.c  sockets.c  sysctl.c  sysctl.h
src/tests/: run.sh
src/tests/certs/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  server.crt  server.csr  server.key  start.sh  test.pfx
src/tests/certs_old/: ca.crt  ca.key  client2.crt  client2.key  server2.crt  server2.key
src/tests/clickhouse/: run.sh
src/tests/coverage/: parse_coverage_summary.py  run_coverage.sh
src/tests/mock/cadvisor/: metric_names.txt
src/tests/mock/couchbase/: alligator.conf  metrics.txt  nginx.conf  run.sh
src/tests/mock/couchdb/: alligator.conf  htpasswd  metrics.txt  nginx.conf  run.sh
src/tests/mock/druid/: alligator.conf  metrics.txt  nginx.conf  run.sh  tasks
src/tests/mock/elasticsearch/: health.json  index.json  nodes.json  settings.json
src/tests/mock/http/: http1.1.txt
src/tests/system/: common.sh  daemonize.sh  http.sh  http_chunk  test.sh
src/tests/unit/: base64.h  http.h  http_reply.h  metrics_example.txt  netlib.h  pw.h  query.h  selector.h  tests.c  url.h  validator.c  validator.h
src/tests/unit2/: api_v1.h  config.h  dns.h  ht.h  http.h  json_query.h  maglev.h  netlib.h  parsers.h  protobuf_wire.h  system.h  tests.c  validator.h
src/x509/: del.c  pem_check.c  push.c  type.h
(+625 files in other folders)
